--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "jade": "^1.11.0"
   },
   "devDependencies": {
+    "coffee-script": "^1.10.0",
     "gulp": "^3.9.1",
     "gulp-coffee": "^2.3.1",
+    "gulp-jasmine": "^2.3.0",
     "gulp-sass": "^2.2.0",
     "gulp-util": "^3.0.7",
     "jasmine": "^2.4.1",
