--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
   },
   "devDependencies": {
     "coffee-script": "^1.10.0",
+    "coffeeify": "^2.0.1",
     "gulp": "^3.9.1",
+    "gulp-browserify": "^0.5.1",
     "gulp-coffee": "^2.3.1",
     "gulp-jasmine": "^2.3.0",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.2.0",
     "gulp-util": "^3.0.7",
     "jasmine": "^2.4.1",
