--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.2.0",
     "gulp-util": "^3.0.7",
+    "handlebars": "^4.0.5",
     "jasmine": "^2.4.1",
+    "jquery": "^2.2.2",
     "run-sequence": "^1.1.5"
   }
 }
