--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
   "devDependencies": {
     "coffee-script": "^1.10.0",
     "coffeeify": "^2.0.1",
+    "generator-gulp-angular": "^1.1.0",
     "gulp": "^3.9.1",
     "gulp-browserify": "^0.5.1",
     "gulp-coffee": "^2.3.1",
     "gulp-jasmine": "^2.3.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.2.0",
+    "gulp-sass-lint": "^1.1.1",
     "gulp-util": "^3.0.7",
     "handlebars": "^4.0.5",
     "jasmine": "^2.4.1",
